infra/k8s/delivery-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
  namespace: team02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
      - name: delivery-service
        image: docker.io/wsk221e/team02-delivery-service:latest
        ports:
        - containerPort: 8087
        resources:
          requests:
            cpu: "500m"
            memory: "1024Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: team02
spec:
  type: ClusterIP
  selector:
    app: delivery-service
  ports:
  - port: 8087
    targetPort: 8087
    protocol: TCP
