infra/k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: team02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: 093322228889.dkr.ecr.ap-northeast-2.amazonaws.com/team02-order-service:latest
        ports:
        - containerPort: 8085
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: team02
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
  - port: 8085
    targetPort: 8085
    protocol: TCP
