infra/k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: team02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: docker.io/wsk221e/team02-payment-service:latest
        ports:
        - containerPort: 8084
        resources:
          requests:
            cpu: "500m"
            memory: "1024Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: team02
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
  - port: 8084
    targetPort: 8084
    protocol: TCP
