infra/k8s/review-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
  namespace: team02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
      - name: review-service
        image: docker.io/wsk221e/team02-review-service:latest
        ports:
        - containerPort: 8086
        resources:
          requests:
            cpu: "500m"
            memory: "1024Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
  namespace: team02
spec:
  type: ClusterIP
  selector:
    app: review-service
  ports:
  - port: 8086
    targetPort: 8086
    protocol: TCP
