infra/k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: team02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: docker.io/wsk221e/team02-user-service:latest
        ports:
        - containerPort: 8082
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: team02
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
